<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tesk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.tesk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.tesk.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.tesk.ui.personal.PersonalFragment"
        android:label="@string/personal"
        tools:layout="@layout/personal_fragment" >
        <action
            android:id="@+id/action_navigation_personal_to_feedbackFragment"
            app:destination="@id/feedbackFragment" />
        <action
            android:id="@+id/action_navigation_personal_to_addressDetailFragment"
            app:destination="@id/addressDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.example.tesk.ui.personal.FeedbackFragment"
        android:label="FeedbackFragment" />
    <fragment
        android:id="@+id/addressDetailFragment"
        android:name="com.example.tesk.ui.personal.AddressDetailFragment"
        android:label="AddressDetailFragment" />
</navigation>