<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address.AddressActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints">



        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/im_system_msg"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="9dp"
            android:src="@mipmap/icon_back"
            android:textColor="@color/textColor"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="77dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/add_name"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/bank_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="77dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/add_contacts"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/add_contacts"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/add_consignee"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="77dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/add_contacts1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/add_consignee"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="77dp"
            android:layout_height="39dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/add_contacts1s"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/add_consignee"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/qiangbaoa"
        style="@style/edit_profile_group"
        android:onClick="editProfileClick"
        tools:ignore="OnClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="245dp"
            android:layout_marginRight="25dp"
            android:ellipsize="end"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/add_address"
            android:textColor="@color/add_address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/text_gules"
            android:textSize="15sp" />



    </LinearLayout>

    <TextView
        android:id="@+id/Withdrawal_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="111dp"
        android:background="@drawable/bg_btn_chat_charge"
        android:enabled="false"
        android:gravity="center"
        android:text="保存"
        android:textColor="@color/white"
        android:textSize="14sp"
        />


</LinearLayout>