<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:paddingTop="19dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profit"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:onClick="backClick"
                android:padding="9dp"
                android:src="@mipmap/icon_back"
                />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/kapainbeijign"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:text="可提现的快乐豆"
                android:id="@+id/all_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                />

            <TextView
                android:text="0.00"
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"
                />
            <TextView
                android:text="快乐豆兑换比例5:1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                />



        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:gravity="center"
                android:id="@+id/Tuxuan"
                android:layout_width="78.5dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="0dp"
                android:singleLine="true"
                android:background="@drawable/ic_login_btn"
                android:text="提现记录"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="20dp"
                android:text="@string/login_tip_1"
                android:textColor="@color/gray1"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/ic_wa_chat_charge"
                android:ellipsize="end"
                android:hint="@string/school"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/text_gray"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.5dp"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="20dp"
                android:text="@string/Withdrawal"
                android:textColor="@color/gray1"
                android:textSize="15sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/ic_wa_chat_charge"
            android:orientation="horizontal"
            >


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="支付宝账号"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text=" 1111111"
                android:layout_marginRight="148dp"
                android:textColor="#ff333333"
                android:textSize="15sp"
                 />


            <ImageView
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/shanchu" />

        </LinearLayout>


        <TextView
            android:id="@+id/btn_cash"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_follow"
            android:enabled="false"
            android:gravity="center"
            android:text="添加支付宝账号"
            android:textColor="@color/gray3"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/Withdrawal_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="111dp"
            android:background="@drawable/bg_btn_chat_charge"
            android:enabled="false"
            android:gravity="center"
            android:text="立即提现"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

    </LinearLayout>


</LinearLayout>